# Terramind

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  tasks.ps1
docs/: architecture.md  cybersecurity.md  discursive_questions.md
docs/diagrams/: architecture.mmd  sequence_alert.mmd
infra/nginx/: nginx.conf
infra/nginx/certs/: .gitkeep
infra/postgres/: init.sql
scripts/: seed.py  simulate_readings.py  tasks.py
services/alert-service/: Dockerfile  entrypoint.sh  pyproject.toml
services/alert-service/migrations/: env.py
services/auth-service/: Dockerfile  entrypoint.sh  pyproject.toml
services/auth-service/migrations/: env.py
services/auth-service/migrations/versions/: 0001_initial.py
services/auth-service/src/auth_service/: __init__.py  config.py  dependencies.py  main.py
services/auth-service/src/auth_service/controllers/: __init__.py  auth_controller.py
services/auth-service/src/auth_service/models/: __init__.py  refresh_token.py  user.py
services/auth-service/src/auth_service/repositories/: __init__.py  refresh_token_repository.py  user_repository.py
services/auth-service/src/auth_service/schemas/: __init__.py  auth.py
services/auth-service/src/auth_service/services/: __init__.py  auth_service.py
services/farm-service/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
services/satellite-service/: Dockerfile  entrypoint.sh  pyproject.toml
services/satellite-service/migrations/: env.py
services/satellite-service/migrations/versions/: 0001_initial.py
services/satellite-service/src/satellite_service/: __init__.py  config.py  dependencies.py  main.py
services/satellite-service/src/satellite_service/controllers/: __init__.py  reading_controller.py  satellite_controller.py
services/satellite-service/src/satellite_service/models/: __init__.py  reading.py  satellite.py
services/satellite-service/src/satellite_service/repositories/: __init__.py  reading_repository.py  satellite_repository.py
services/satellite-service/src/satellite_service/schemas/: __init__.py  reading.py  satellite.py
services/satellite-service/src/satellite_service/services/: __init__.py  reading_service.py  satellite_service.py
services/sensor-service/: Dockerfile  entrypoint.sh  pyproject.toml
(+64 files in other folders)
