[project]
name = "terramind"
version = "0.1.0"
description = "Terramind — Plataforma de Monitoramento Agrícola (FIAP GS 2026-1, ODS 9)"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = ["packages/*", "services/*"]

[tool.uv.sources]
terramind-shared = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
    "freezegun>=1.5",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "N"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S105", "S106"]
"**/migrations/**" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages", "services"]
python_files = ["test_*.py"]
