[project]
name = "auth-service"
version = "0.1.0"
description = "Terramind auth-service — registro, login, JWT, RBAC."
requires-python = ">=3.12"
dependencies = [
    "terramind-shared",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7.4",
    "aio-pika>=9.4",
    "structlog>=24.1",
    "email-validator>=2.1",
]

[tool.uv.sources]
terramind-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auth_service"]
